@@ -1,5 +1,10 @@
 2010-07-18  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/DataProvider.cs:
+	* Navigation/LanguageItemCommandHandler.cs: Track API changes.
+
+2010-07-18  Mike Krüger  <mkrueger@novell.com>
+
 	* Makefile.am:
 	* CBinding.csproj:
 	* Gui/CTextEditorExtension.cs: Track API changes.
